# multichannel_audio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-crates.yml  run-tests.yml
multichannel_audio/: Cargo.toml  README.md
multichannel_audio/src/: audio_class.rs  audio_settings.rs  buffer_types.rs  lib.rs  methods.rs  missing_device_error.rs  sample_formats.rs  sample_rates.rs  stream_controller.rs  time_align.rs
multichannel_audio_bin/: Cargo.toml
multichannel_audio_bin/src/: main.rs
src/: audio_class.rs  lib.rs  methods.rs  missing_device_error.rs  stream_controller.rs
